# core-dev-tools

./: svn-commit.tmp
branches/tools/binutils/binutils_2_12_branch/: configure  module.tmpl
branches/tools/gcc/gcc_2_95_branch/: package-libgcc.qpg
branches/tools/gcc/gcc_2_95_branch/texinfo/makeinfo/: Makefile.am  makeinfo.c
branches/tools/gcc/gcc_2_95_branch/texinfo/util/: Makefile.am  install-info.c  mkinstalldirs  texindex.c
branches/tools/gcc/gcc_3_3_branch/: build-hooks
branches/tools/gdb/gdb_5_2_branch/: build-hooks  config.guess  config.sub
branches/tools/make_3_80_branch/: NMakefile  QMakefile  configure
branches/tools/make_3_80_branch/config/: mkinstalldirs
branches/tools/make_3_80_branch/glob/: glob.c
branches/tools/nasm_0_98_35_branch/: configure
branches/tools/nasm_0_98_35_branch/misc/: myC32.mac
tools/binutils/branches/704_release/: build-hooks  configure.ac
tools/binutils/branches/710_release/: build-hooks  configure  configure.ac
tools/binutils/trunk/: build-hooks  configure  configure.ac  md5.sum  svn-commit.2.tmp  svn-commit.tmp
tools/gcc/trunk/: build-hooks  configure  ltcf-c.sh  ltcf-cxx.sh
tools/libgmp/gmp-6.1.0/: build-hooks
tools/libmpc/mpc-1.0.3/: build-hooks  configure
tools/libmpfr/700_release/: configure.ac
tools/libmpfr/mpfr-3.1.3/: Makefile.in  configure
tools/nasm/trunk/: build-hooks  nasm.man  nasm.spec.in  package.qpg  regs.pl
trunk/tools/binutils/: configure  ltconfig
trunk/tools/gcc/: build-hooks
trunk/tools/make/: aclocal.m4
trunk/tools/nasm/: configure  configure.in  ndisasm.man  version.pl
(+3385 files in other folders)
